--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-
+asgiref==3.5.2
 distlib==0.3.0
 dj-database-url==0.5.0
-Django==2.2.11
+Django==3.2.11
 django-comments-xtd==2.6.1
 django-contrib-comments==1.9.2
+django-cors-headers==3.13.0
 django-countries==6.1.2
 django-crispy-forms==1.9.0
 django-heroku==0.3.1
@@ -13,7 +14,11 @@ djangorestframework==3.11.0
 docutils==0.16
 filelock==3.0.12
 gunicorn==20.0.4
+Pillow==9.2.0
+psycopg2==2.8.6
 python-dateutil==2.8.0
 pytz==2020.5
+six==1.16.0
 sqlparse==0.3.1
-psycopg2==2.8.6
+tzdata==2022.6
+whitenoise==6.2.0
